--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "failFast": true,
     "verbose": true
   },
+  "dependencies": {
+    "debug": "^3.0.1"
+  },
   "devDependencies": {
     "auto-bind": "^1.1.0",
     "ava": "^0.22.0",
     "codecov": "^2.3.0",
     "cross-env": "^5.0.5",
-    "debug": "^3.0.1",
     "eslint": "^4.5.0",
     "eslint-config-prettier": "^2.3.0",
     "eslint-plugin-prettier": "^2.2.0",
@@ -27,6 +29,7 @@
     "kcors": "^2.2.1",
     "koa": "^2.3.0",
     "koa-compose": "^4.0.0",
+    "koa-route": "^3.2.0",
     "lint-staged": "^4.0.4",
     "nyc": "^11.1.0",
     "prettier": "^1.6.1",
@@ -112,9 +115,5 @@
       "no-warning-comments": "off"
     },
     "space": true
-  },
-  "dependencies": {
-    "koa-mount": "^3.0.0",
-    "koa-route": "^3.2.0"
   }
 }
